[package]
name = "exper_once_cell"
authors = [ "Wink Saville <wink@saville.com" ]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

# From: https://doc.rust-lang.org/cargo/reference/profiles.html#dev
[profile.dev]
opt-level = 0
debug = true
#split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

# From: https://doc.rust-lang.org/cargo/reference/profiles.html#release
[profile.release]
opt-level = 3
debug = false
#split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
once_cell = "1.16.0"
rand = "0.8.5"
